update template模块
