# template/app/query/types.go
@@ -1,9 +1,12 @@
 package query
 
+import "time"
+
 type EmailTemplate struct {
-	ID      int      `json:"id"`
-	Type    int      `json:"type"`
-	Topic   string   `json:"topic"`
-	Content string   `json:"content"`
-	Slots   []string `json:"slots"`
+	ID         int64     `json:"id"`
+	Type       int       `json:"type"`
+	Topic      string    `json:"topic"`
+	Content    string    `json:"content"`
+	Slots      []string  `json:"slots"`
+	UpdateTime time.Time `json:"updateTime"`
 }
